alignment css fix

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -164,7 +164,7 @@ h4 {
             top: 0;
             right: 0;
             width: 40%;
-            height: 45%;
+            height: 50%;
             border-radius: 10px;
             border: 1px solid black;
             background-color: rgb(158 158 158 / 96%);
@@ -341,7 +341,11 @@ h4 {
     width: 96%;
     margin: 0 auto;
     max-width: 1110px;
-    margin-top: 125px;
+    margin-top: 150px;
+
+    @media (max-width: 768px) { 
+        margin-top: 50px; 
+    }
 }
 
 .home-container__inner {
